include/qemu/plugin.h


struct qemu_plugin_insn {
    uint64_t vaddr;
    GArray *insn_cbs;
    GArray *mem_cbs;
    uint8_t len;
    bool calls_helpers;
    bool mem_helper;
};
struct qemu_plugin_scoreboard {
    GArray *data;
    QLIST_ENTRY(qemu_plugin_scoreboard) entry;
};
struct qemu_plugin_tb {
    GPtrArray *insns;
    size_t n;
    bool mem_helper;
    GArray *cbs;
};